[Quantity System Framework 1.1.3] - Now Factorial is also available for real numbers - Fixed serious caching error in units conversion
New Units
---------
- Gravitional System under metric added three new units
- <hyl> for mass
- <p>  small letter for Pond unit  which equal <gf> Gramforce  added also

- <grain> renamed to <gr>  Grain unit
- Poundal unit <pdl> added = <lbm.ft/s^2>

--- a/QuantitySystemSolution/QuantitySystem/QuantitySystem.csproj
+++ b/QuantitySystemSolution/QuantitySystem/QuantitySystem.csproj
@@ -169,6 +169,8 @@
     <Compile Include="Units\Metric\Cgs\ViscosityUnits.cs">
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="Units\Metric\Gravitational\ForceUnits.cs" />
+    <Compile Include="Units\Metric\Gravitational\MassUnits.cs" />
     <Compile Include="Units\Metric\Mts\ForceUnits.cs" />
     <Compile Include="Units\Metric\Mts\MassUnits.cs" />
     <Compile Include="Units\Metric\Mts\PressureUnits.cs" />
