[Quantity System Framework 1.1.4] {Released} - Moved Exception handling from Qs layer to Console layer  so that dynamically calling for Qs will see the real exceptions.
- Fixed the Factorial for the thousand TIME :( I don't know why the function is always trick me and goes WRONG :D I must be slept or something.
   3<m>! = 6<m^3>  
   3.5<m>! = 11.6317283996629 <m^3.5>
   you can notice that factorial is accepting real positive numbers with units also :)
   this is what you should expect from treating variables as quantities.
   
- I think there are no caching errors however if any one find conversion error please revert back to release 1.1

- Not related to the program (I finished preliminary master exams today :) ) 2009-07-20  
    4 days to enter my fourth decade, 4 days and I will celebrate my 30 birthday day ;)  wish me luck.

--- a/QuantitySystemSolution/QuantitySystem.Runtime/Qs.csproj
+++ b/QuantitySystemSolution/QuantitySystem.Runtime/Qs.csproj
@@ -58,6 +58,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="QsInvalidInputException.cs" />
     <Compile Include="ParticleLexer\Token.cs" />
     <Compile Include="ParticleLexer\TokenPatternAttribute.cs" />
     <Compile Include="ParticleLexer\TokenType.cs" />
@@ -68,9 +69,11 @@
     <Compile Include="Runtime\QsBinder.cs" />
     <Compile Include="Runtime\QsContext.cs" />
     <Compile Include="Runtime\QsEvaluator.cs" />
-    <Compile Include="Runtime\QsException.cs" />
+    <Compile Include="QsException.cs" />
     <Compile Include="Runtime\QsFunction.cs" />
     <Compile Include="Runtime\QsScriptCode.cs" />
+    <Compile Include="Runtime\QsSequence.cs" />
+    <Compile Include="Runtime\QsSequenceElement.cs" />
     <Compile Include="Runtime\QsVar.cs" />
   </ItemGroup>
   <ItemGroup>
