--- a/QuantitySystemSolution/QuantitySystemCalculator/QuantitySystemCalculator.csproj
+++ b/QuantitySystemSolution/QuantitySystemCalculator/QuantitySystemCalculator.csproj
@@ -54,6 +54,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="QsCommands.cs" />
     <Compile Include="QsHost.cs" />
     <Compile Include="QsCommandLine.cs" />
     <Compile Include="QsOptionsParser.cs" />
@@ -63,9 +64,16 @@
       <Project>{615A100B-4890-434E-8869-2A9B3200D664}</Project>
       <Name>Qs</Name>
     </ProjectReference>
+    <ProjectReference Include="..\QuantitySystem\QuantitySystem.csproj">
+      <Project>{78909C0B-AA53-48F9-8AC9-F3937383629C}</Project>
+      <Name>QuantitySystem</Name>
+    </ProjectReference>
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
+    <None Include="test.qs">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <Content Include="Qs.ico" />
