[Quantity System 1.1.7] {Release}
- Passing Functions as arguments.
  
- Optimization for parameterless sequqnece  {actually I am only caching elements  especially for fibonaccy like sequences}
     however sequence still need another optimizations.
     
- Run [filename] in console load the content file into the current session and execute its contents (usefull if you had coded previous functions or sequences before)

--- a/QuantitySystemSolution/QuantitySystem.Runtime/Qs.csproj
+++ b/QuantitySystemSolution/QuantitySystem.Runtime/Qs.csproj
@@ -70,6 +70,8 @@
     <Compile Include="Runtime\QsEvaluator.cs" />
     <Compile Include="QsException.cs" />
     <Compile Include="Runtime\QsFunction.cs" />
+    <Compile Include="Runtime\QsParameter.cs" />
+    <Compile Include="Runtime\QsParamInfo.cs" />
     <Compile Include="Runtime\QsScriptCode.cs" />
     <Compile Include="Runtime\QsSequence.cs" />
     <Compile Include="Runtime\QsSequenceElement.cs" />
