Build and Try Those :)   "Windows Only"   Qs> Music:Play(c d e f g a b c>)     #Play major scale on Do   Qs> Music:SaveMidi(c d e f g a b c>, tt.mid)   Qs> Music:PlayMidi(tt.mid)   Qs> Music:PlayMidi(RaisingFight.mid)

--- a/QuantitySystemSolution/QuantitySystem.Runtime/Qs.csproj
+++ b/QuantitySystemSolution/QuantitySystem.Runtime/Qs.csproj
@@ -58,7 +58,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Modules\QsMath.cs">
+    <Compile Include="Modules\Math.cs">
       <SubType>Code</SubType>
     </Compile>
     <Compile Include="QsInvalidInputException.cs" />
