--- a/QuantitySystemSolution/QuantitySystem.Runtime/Qs.csproj
+++ b/QuantitySystemSolution/QuantitySystem.Runtime/Qs.csproj
@@ -48,10 +48,15 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\DLR\Microsoft.Scripting.Core.dll</HintPath>
     </Reference>
+    <Reference Include="Microsoft.Scripting.ExtensionAttribute, Version=2.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\DLR\Microsoft.Scripting.ExtensionAttribute.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core">
       <RequiredTargetFramework>3.5</RequiredTargetFramework>
     </Reference>
+    <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml.Linq">
       <RequiredTargetFramework>3.5</RequiredTargetFramework>
     </Reference>
@@ -66,12 +71,16 @@
     <Compile Include="Modules\Math.cs">
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="Modules\Thermo.cs" />
+    <Compile Include="Modules\Windows.cs" />
     <Compile Include="QsInvalidInputException.cs" />
     <Compile Include="ParticleLexer\Token.cs" />
     <Compile Include="ParticleLexer\TokenPatternAttribute.cs" />
     <Compile Include="ParticleLexer\TokenType.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Qs.cs" />
+    <Compile Include="Runtime\QsFunctionNotFoundException.cs" />
+    <Compile Include="Runtime\QsFunction_Helper.cs" />
     <Compile Include="Runtime\Operators\QsGamma.cs" />
     <Compile Include="RuntimeTypes\QsScalar.cs" />
     <Compile Include="RuntimeTypes\QsValue.cs" />
@@ -85,7 +94,7 @@
     <Compile Include="RuntimeTypes\QsMatrix.cs" />
     <Compile Include="RuntimeTypes\QsMatrixException.cs" />
     <Compile Include="RuntimeTypes\QsMatrixOperations.cs" />
-    <Compile Include="Runtime\QsNameSpace.cs" />
+    <Compile Include="Runtime\QsNamespace.cs" />
     <Compile Include="Runtime\QsParameter.cs" />
     <Compile Include="Runtime\QsParamInfo.cs" />
     <Compile Include="Runtime\QsScriptCode.cs" />
@@ -100,6 +109,11 @@
       <Project>{78909C0B-AA53-48F9-8AC9-F3937383629C}</Project>
       <Name>QuantitySystem</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Notes\Function Implementation.txt" />
+    <Content Include="Notes\If Implementation.txt" />
+    <Content Include="Notes\Namespace implementation.txt" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
