--- a/QuantitySystemSolution/QuantitySystemCalculator/QuantitySystemCalculator.csproj
+++ b/QuantitySystemSolution/QuantitySystemCalculator/QuantitySystemCalculator.csproj
@@ -75,6 +75,9 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
+    <None Include="func.qs">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
     <None Include="matrix.qs">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
