[Qs 1.1.9.8] - fixed casing error in when otherwise  statement
- fixed an exception of accessing delegate property in mono
    replaced the call to property into a function call.
    
- Enhancing passing arguments to functions
    frankly fixed f(a) = Windows:MessageBox(a) 
    that resulted in displaying a when f(hello)
    now it shows hello :)
    
- [MassFlowRate] Quantity Added.

- Comparing Scalars with vectors is calculated based on Magnitude of the vectors.
- Comparing Vector with Vector also rely on the magnitude of vectors.

---------------------

What else should I make/fix before releasing ???

--- a/QuantitySystemSolution/QuantitySystem/QuantitySystem.csproj
+++ b/QuantitySystemSolution/QuantitySystem/QuantitySystem.csproj
@@ -100,6 +100,7 @@
     <Compile Include="Quantities\LuminousFlux.cs" />
     <Compile Include="Quantities\MagneticFlux.cs" />
     <Compile Include="Quantities\MagneticFluxDensity.cs" />
+    <Compile Include="Quantities\MassFlowRate.cs" />
     <Compile Include="Quantities\MassMomentOfInertia.cs">
       <SubType>Code</SubType>
     </Compile>
