BugFixing calling F(z:=f(y:=f(x:=8))) what a silly error
I wonder what if I used a ANTLR or any language design tool to make the syntax would it be so hard like this or more easier !!!

--- a/QuantitySystemSolution/QuantitySystem.Runtime/Qs.csproj
+++ b/QuantitySystemSolution/QuantitySystem.Runtime/Qs.csproj
@@ -71,6 +71,7 @@
     <Compile Include="Modules\Math.cs">
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="Modules\Matrix.cs" />
     <Compile Include="Modules\Windows.cs" />
     <Compile Include="QsInvalidInputException.cs" />
     <Compile Include="ParticleLexer\Token.cs" />
