Ignoring the generated files while building the solution from visual studio.

--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,9 @@
 /QuantitySystemSolution/QsGraphics/obj/Debug
 /QuantitySystemSolution/Qs.Scripting/obj/Debug
 /QuantitySystemSolution/Qs.RT/obj/Debug
+/QuantitySystemSolution/QuantitySystemCalculator/bin/Debug
+/QuantitySystemSolution/QuantitySystem.Runtime/bin/Debug
+/QuantitySystemSolution/QuantitySystem/bin/Debug
+/QuantitySystemSolution/QsGraphics/bin/Debug
+/QuantitySystemSolution/Qs.Scripting/bin/Debug
+/QuantitySystemSolution/.vs/QuantitySystemSolution/v15
