Fixed a bug when evaluating <m!/m>

--- a/.gitignore
+++ b/.gitignore
@@ -29,3 +29,4 @@
 /QuantitySystemSolution/Qs/bin/Debug
 /QuantitySystemSolution/Qs/obj
 /QuantitySystemSolution/QuantitySystem/obj
+/QuantitySystemSolution/.vs/QuantitySystemSolution/v16/TestStore/0
