this commit is yet not really accurate i made  length and length vector
most noticable is when getting square root to Vector.Vector   will convert it into scalar length.

--- a/QuantitySystemSolution/QuantitySystem/QuantitySystem.csproj
+++ b/QuantitySystemSolution/QuantitySystem/QuantitySystem.csproj
@@ -13,4 +13,8 @@
     <AssemblyOriginatorKeyFile>QuantitySystem.snk</AssemblyOriginatorKeyFile>
   </PropertyGroup>
 
+  <ItemGroup>
+    <None Remove="Quantities\Speed.cs~RF2d696ddd.TMP" />
+  </ItemGroup>
+
 </Project>
