Converting the scripting project to be a standard 2.0 library and now depended on the DLR library from nuget so the whole projects are now standard library 2.0 however the calulcator is still in .net framework.

--- a/.gitignore
+++ b/.gitignore
@@ -30,3 +30,6 @@
 /QuantitySystemSolution/Qs/obj
 /QuantitySystemSolution/QuantitySystem/obj
 /QuantitySystemSolution/.vs/QuantitySystemSolution/v16/TestStore/0
+/QuantitySystemSolution/Qs.StandardScripting/obj
+/QuantitySystemSolution/Qs.StandardScripting/bin/Debug
+/QuantitySystemSolution/packages/DynamicLanguageRuntime.1.3.0
