--- a/QuantitySystemSolution/QuantitySystemCalculator/QuantitySystemCalculator.csproj
+++ b/QuantitySystemSolution/QuantitySystemCalculator/QuantitySystemCalculator.csproj
@@ -10,7 +10,7 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>QuantitySystemCalculator</RootNamespace>
     <AssemblyName>QuantitySystemCalculator</AssemblyName>
-    <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <SccProjectName>SAK</SccProjectName>
     <SccLocalPath>SAK</SccLocalPath>
@@ -80,13 +80,17 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Microsoft.CSharp" />
-    <Reference Include="Microsoft.Dynamic, Version=0.9.6.20, Culture=neutral, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\DLR\Microsoft.Dynamic.dll</HintPath>
+    <Reference Include="Microsoft.Dynamic, Version=1.3.0.0, Culture=neutral, PublicKeyToken=7f709c5b713576e1, processorArchitecture=MSIL">
+      <HintPath>..\packages\DynamicLanguageRuntime.1.3.0\lib\net45\Microsoft.Dynamic.dll</HintPath>
+      <Private>True</Private>
     </Reference>
-    <Reference Include="Microsoft.Scripting, Version=0.9.6.20, Culture=neutral, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\DLR\Microsoft.Scripting.dll</HintPath>
+    <Reference Include="Microsoft.Scripting, Version=1.3.0.0, Culture=neutral, PublicKeyToken=7f709c5b713576e1, processorArchitecture=MSIL">
+      <HintPath>..\packages\DynamicLanguageRuntime.1.3.0\lib\net45\Microsoft.Scripting.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="Microsoft.Scripting.Metadata, Version=1.3.0.0, Culture=neutral, PublicKeyToken=7f709c5b713576e1, processorArchitecture=MSIL">
+      <HintPath>..\packages\DynamicLanguageRuntime.1.3.0\lib\net45\Microsoft.Scripting.Metadata.dll</HintPath>
+      <Private>True</Private>
     </Reference>
     <Reference Include="ParticleLexer, Version=1.6.0.0, Culture=neutral, PublicKeyToken=28aac535fb4e03cb, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
@@ -121,9 +125,9 @@
     <Compile Include="QsRoot\Windows.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Qs.Scripting\Qs.Scripting.csproj">
-      <Project>{9D9327DD-4B4C-4FB5-A671-1287D1C15341}</Project>
-      <Name>Qs.Scripting</Name>
+    <ProjectReference Include="..\Qs.StandardScripting\Qs.StandardScripting.csproj">
+      <Project>{b4c8eb97-7ab2-4f23-80b6-d06434cdedae}</Project>
+      <Name>Qs.StandardScripting</Name>
     </ProjectReference>
     <ProjectReference Include="..\Qs\Qs.csproj">
       <Project>{3204857e-b04a-4304-a37e-a8ac6811db36}</Project>
@@ -148,6 +152,7 @@
     <None Include="MetricTensor.qs">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+    <None Include="packages.config" />
     <None Include="speed.qs">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
