--- a/QuantitySystemSolution/QuantitySystemCalculator/app.config
+++ b/QuantitySystemSolution/QuantitySystemCalculator/app.config
@@ -1,3 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <configuration>
-<startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2"/></startup></configuration>
+	<startup>
+		<supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2"/>
+	</startup>
+
+	<appSettings>
+		<add key="openexchangeapikey" value="25e93e39fd2b43939b2b62939479609d"/>
+	</appSettings>
+</configuration>
