--- a/QuantitySystemSolution/UnitsTestingProject/UnitsTestingProject.csproj
+++ b/QuantitySystemSolution/UnitsTestingProject/UnitsTestingProject.csproj
@@ -10,7 +10,7 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>UnitsTestingProject</RootNamespace>
     <AssemblyName>UnitsTestingProject</AssemblyName>
-    <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{3AC096D0-A1C2-E12C-1390-A8335801FDAB};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
     <SccProjectName>SAK</SccProjectName>
@@ -95,6 +95,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="IssuesTests.cs" />
     <Compile Include="MetricTests.cs" />
     <Compile Include="OperationsTest.cs" />
     <Compile Include="SISystemTest.cs" />
