so .. these changes is for considering Force,  and acceleration as Vectors.

--- a/.gitignore
+++ b/.gitignore
@@ -32,3 +32,4 @@
 /QuantitySystemSolution/.vs/QuantitySystemSolution/v15
 /QuantitySystemSolution/.vs/QuantitySystemSolution/v16
 /QuantitySystemSolution/.vs/QuantitySystemSolution/v17
+/QuantitySystemSolution/.vs/QuantitySystemSolution/FileContentIndex
