--- a/.gitignore
+++ b/.gitignore
@@ -32,3 +32,5 @@
 /QuantitySystemSolution/.vs/QuantitySystemSolution/v15
 /QuantitySystemSolution/.vs/QuantitySystemSolution/v16
 /QuantitySystemSolution/.vs/QuantitySystemSolution/v17
+/QuantitySystemSolution/.vs/QuantitySystemSolution/FileContentIndex
+/QuantitySystemSolution/.vs/ProjectEvaluation
