[Qs 1.7.6] - Continued the statistics properties of the QsMatrix with 2 columns  CoVariance, and Correlation

--- a/QuantitySystemSolution/QuantitySystem/QuantitySystem.csproj
+++ b/QuantitySystemSolution/QuantitySystem/QuantitySystem.csproj
@@ -13,4 +13,23 @@
     <AssemblyOriginatorKeyFile>QuantitySystem.snk</AssemblyOriginatorKeyFile>
   </PropertyGroup>
 
+  <ItemGroup>
+    <None Update="Units\Currency\Currencies.tt">
+      <Generator>TextTemplatingFileGenerator</Generator>
+      <LastGenOutput>Currencies.cs</LastGenOutput>
+    </None>
+  </ItemGroup>
+
+  <ItemGroup>
+    <Service Include="{508349b6-6b84-4df5-91f0-309beebad82d}" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Compile Update="Units\Currency\Currencies.cs">
+      <DesignTime>True</DesignTime>
+      <AutoGen>True</AutoGen>
+      <DependentUpon>Currencies.tt</DependentUpon>
+    </Compile>
+  </ItemGroup>
+
 </Project>
