--- a/QuantitySystemSolution/Qs/Qs.csproj
+++ b/QuantitySystemSolution/Qs/Qs.csproj
@@ -2,9 +2,9 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
-    <Version>1.7.4</Version>
+    <Version>1.7.6</Version>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
-    <Copyright>Copyright (c) 2008-2024 at Lost Particles Network by Ahmed Sadek</Copyright>
+    <Copyright>Copyright (c) 2008-2025 at Lost Particles Network by Ahmed Sadek</Copyright>
     <Product>Quantity System Runtime</Product>
     <Company>Lost Particles Network (http://www.lostparticles.net)</Company>
     <Description>Qs Dynamic Language that encompasses the Quantity System Framework</Description>
@@ -31,6 +31,25 @@
     <Reference Include="SymbolicAlgebra">
       <HintPath>..\Libraries\SymbolicAlgebra.dll</HintPath>
     </Reference>
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Update="QsRoot\QsMath.tt">
+      <Generator>TextTemplatingFileGenerator</Generator>
+      <LastGenOutput>QsMath.generated.cs</LastGenOutput>
+    </None>
+  </ItemGroup>
+
+  <ItemGroup>
+    <Service Include="{508349b6-6b84-4df5-91f0-309beebad82d}" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Compile Update="QsRoot\QsMath.generated.cs">
+      <DesignTime>True</DesignTime>
+      <AutoGen>True</AutoGen>
+      <DependentUpon>QsMath.tt</DependentUpon>
+    </Compile>
   </ItemGroup>
 
 </Project>
